# neural-network

./: README.md  dataset.txt  main.py  neural_network.py  pyproject.toml
datasets/: iono.txt  network.txt  network2.txt  pima.tsv  wdbc.txt  wine2.data
examples/: dataset2.txt  initial_weights2.txt
output/: 17-06-2019_18-06-35_numerical_verification.txt  20-06-2019_20-09-52_backpropagation.txt
