[tool.poetry]
name = "neural-network-ufrgs"
version = "0.1.0"
description = ""
authors = ["Felipe Zorzo <felipe.1707@hotmail.com>"]
readme = "README.md"
packages = [{include = "neural_network_ufrgs"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
numpy = "^1.23.3"
pandas = "^1.5.0"
scipy = "1.9.1"
scikit-learn = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
